[package]
name = "slog-kvfilter"
version = "0.6.1"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>", "Tony Przygienda <prz@zeta2.ch>"]
description = "Key values and Regex based filter Drain for slog-rs"
keywords = ["slog", "logging", "log", "filter"]
license = "MPL-2.0/MIT/Apache-2.0"
documentation = "https://docs.rs/slog-kvfilter"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/kvfilter"
readme = "README.md"

[features]
# serde_regex should be enabled iff serde is enabled.
# I don't know how to express this in Cargo.toml automatically, though.
default=["serde", "serde_regex"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }
serde_regex = { version = "0", optional = true }
slog = "2"
regex = "1"
